--- a/assets/less/queries.less
+++ b/assets/less/queries.less
@@ -735,8 +735,12 @@ margin: 0px 10px 0px 10px;
 /* Retina Displays (Tip: Best used only for image replacement)
 ------------------------------------------------------------------ */
 @media 
-only screen and (-webkit-min-device-pixel-ratio : 1.5),
-only screen and (min-device-pixel-ratio : 1.5) {
+only screen and (-webkit-min-device-pixel-ratio: 2),
+only screen and ( min--moz-device-pixel-ratio: 2),
+only screen and (-o-min-device-pixel-ratio: 21),
+only screen and ( min-device-pixel-ratio: 2),
+only screen and ( min-resolution: 192dpi),
+only screen and ( min-resolution: 2dppx) {
 /* Styles */
 
 //header a.brand {
@@ -849,8 +853,12 @@ li.callme a {
 /* iPhone Retina Displays (Tip: Best used only for image replacement)
 ------------------------------------------------------------------ */
 @media 
-only screen and (-webkit-min-device-pixel-ratio : 1.5),
-only screen and (min-device-pixel-ratio : 1.5)
+only screen and (-webkit-min-device-pixel-ratio: 2),
+only screen and ( min--moz-device-pixel-ratio: 2),
+only screen and (-o-min-device-pixel-ratio: 21),
+only screen and ( min-device-pixel-ratio: 2),
+only screen and ( min-resolution: 192dpi),
+only screen and ( min-resolution: 2dppx),
 and (max-width: 480px) {
 /* Styles */
 
